{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 69,
  "lineage": "79c3878d-1c2c-0a33-8710-f58596dd3640",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jump_box_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0526d812786b93d3b",
            "association_id": "eipassoc-074791085100089f2",
            "domain": "vpc",
            "id": "eipalloc-0526d812786b93d3b",
            "instance": "i-08d86f501ccf46167",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0571fcf3d613589b1",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_dns": "ec2-54-219-65-59.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.65.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4eb425d97cde1e8",
            "association_id": "eipassoc-06044982d93f912ea",
            "domain": "vpc",
            "id": "eipalloc-0f4eb425d97cde1e8",
            "network_border_group": "us-west-1",
            "network_interface": "eni-03fc7b4e3edd51ae1",
            "private_dns": "ip-10-10-1-103.us-west-1.compute.internal",
            "private_ip": "10.10.1.103",
            "public_dns": "ec2-184-72-37-96.us-west-1.compute.amazonaws.com",
            "public_ip": "184.72.37.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-1: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-1: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP-VPC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02607683d0503c284",
            "association_id": "eipassoc-0a7c2cbcc0235880a",
            "domain": "vpc",
            "id": "eipalloc-02607683d0503c284",
            "network_border_group": "us-west-1",
            "network_interface": "eni-07d8b0abeb40ab888",
            "private_dns": "ip-10-20-1-58.us-west-1.compute.internal",
            "private_ip": "10.20.1.58",
            "public_dns": "ec2-54-193-113-227.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.113.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-2: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-2: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02eb1685adb70eb60",
            "arn": "arn:aws:ec2:us-west-1:013113200357:instance/i-08d86f501ccf46167",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d86f501ccf46167",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "princeton-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0571fcf3d613589b1"
              }
            ],
            "primary_network_interface_id": "eni-0571fcf3d613589b1",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_ip": "54.219.65.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078422d294b19850e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f925328bc77509ea",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595 - Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595 - Jump Box",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07978475feb223618"
            ]
          },
          "dependencies": [
            "aws_network_interface.jumpbox-nic-1",
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:internet-gateway/igw-0cd8dae0ffe88c6a2",
            "id": "igw-0cd8dae0ffe88c6a2",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:internet-gateway/igw-0b719a4ee4fa1bc0b",
            "id": "igw-0b719a4ee4fa1bc0b",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4eb425d97cde1e8",
            "connectivity_type": "public",
            "id": "nat-0644d42ec9b9aff74",
            "network_interface_id": "eni-03fc7b4e3edd51ae1",
            "private_ip": "10.10.1.103",
            "public_ip": "184.72.37.96",
            "subnet_id": "subnet-0f925328bc77509ea",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02607683d0503c284",
            "connectivity_type": "public",
            "id": "nat-0dd76fff3b54fbe1b",
            "network_interface_id": "eni-07d8b0abeb40ab888",
            "private_ip": "10.20.1.58",
            "public_ip": "54.193.113.227",
            "subnet_id": "subnet-07797a476ac7ad231",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            }
          },
          "dependencies": [
            "aws_eip.nateIP-VPC2",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-priv-vpc-subnet-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-acl/acl-035da69a45b916275",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-035da69a45b916275",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013113200357",
            "subnet_ids": [
              "subnet-0bb472686b0177790"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-priv-vpc-subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-acl/acl-0e7393491939ff493",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e7393491939ff493",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013113200357",
            "subnet_ids": [
              "subnet-07797a476ac7ad231"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC2: ACL DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC2: ACL DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-pub-vpc-subnet-external-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-acl/acl-0b602699c369a4c3d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b602699c369a4c3d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013113200357",
            "subnet_ids": [
              "subnet-0f925328bc77509ea"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-pub-vpc-subnet-internal-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-acl/acl-0d2a4ea7e1413252f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d2a4ea7e1413252f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "013113200357",
            "subnet_ids": [
              "subnet-0b4414f1055206f41"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "external-1-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04282e4d7a83c964f",
            "network_acl_id": "acl-0b602699c369a4c3d",
            "subnet_id": "subnet-0f925328bc77509ea"
          },
          "dependencies": [
            "aws_network_acl.acl-pub-vpc-subnet-external-1",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "internal-1-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0421d467a1ea56730",
            "network_acl_id": "acl-0d2a4ea7e1413252f",
            "subnet_id": "subnet-0b4414f1055206f41"
          },
          "dependencies": [
            "aws_network_acl.acl-pub-vpc-subnet-internal-1",
            "aws_subnet.priv_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "main-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02822feae6a3c0303",
            "network_acl_id": "acl-035da69a45b916275",
            "subnet_id": "subnet-0bb472686b0177790"
          },
          "dependencies": [
            "aws_network_acl.acl-priv-vpc-subnet-main",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "vpc2-pub-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04f8d6ab920d89b00",
            "network_acl_id": "acl-0e7393491939ff493",
            "subnet_id": "subnet-07797a476ac7ad231"
          },
          "dependencies": [
            "aws_network_acl.acl-priv-vpc-subnet-pub",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jumpbox-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:network-interface/eni-0571fcf3d613589b1",
            "attachment": [
              {
                "attachment_id": "eni-attach-0706cdbd64b27a396",
                "device_index": 0,
                "instance": "i-08d86f501ccf46167"
              }
            ],
            "id": "eni-0571fcf3d613589b1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:2f:a8:2b:6e:d5",
            "owner_id": "013113200357",
            "private_ip": "10.10.1.10",
            "private_ip_list": [
              "10.10.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07978475feb223618"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f925328bc77509ea",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Primary Network Interface",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Primary Network Interface",
              "Team": "John, Afreen, Jawad, Usman"
            }
          },
          "dependencies": [
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-main-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0772e493871377738519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0772e493871377738",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-04c3511445de53360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f4dcd00521d17f6519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f4dcd00521d17f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-04c3511445de53360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RT",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-route-public-vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe2f70df00286c89662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe2f70df00286c89",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-04c3511445de53360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2-inside-network-via-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f4dcd00521d17f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dd76fff3b54fbe1b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f4dcd00521d17f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP-VPC2",
            "aws_nat_gateway.NATgw-vpc2",
            "aws_route_table.RT",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-08b7d1ce1e63805ca",
            "id": "rtb-08b7d1ce1e63805ca",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0644d42ec9b9aff74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-0983d15630c6414c5",
            "id": "rtb-0983d15630c6414c5",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd8dae0ffe88c6a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-04c3511445de53360"
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-00f4dcd00521d17f6",
            "id": "rtb-00f4dcd00521d17f6",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd76fff3b54fbe1b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-04c3511445de53360"
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vcp2-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-0180208b334d7d417",
            "id": "rtb-0180208b334d7d417",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b719a4ee4fa1bc0b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-vpc2",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03885a48d691abcaa",
            "route_table_id": "rtb-08b7d1ce1e63805ca",
            "subnet_id": "subnet-0b4414f1055206f41"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4f9fcaa100f56be",
            "route_table_id": "rtb-0983d15630c6414c5",
            "subnet_id": "subnet-0f925328bc77509ea"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.pub_subnet",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0921f4bd4f7804e30",
            "route_table_id": "rtb-00f4dcd00521d17f6",
            "subnet_id": "subnet-0bb472686b0177790"
          },
          "dependencies": [
            "aws_route_table.RT",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc2_pub_subnet-vcp2-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01df680c7e223c5da",
            "route_table_id": "rtb-0180208b334d7d417",
            "subnet_id": "subnet-07797a476ac7ad231"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-vpc2",
            "aws_route_table.vcp2-pub-rt",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:security-group/sg-07978475feb223618",
            "description": "SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07978475feb223618",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC1:SSH Access from Anywhere",
            "name_prefix": "",
            "owner_id": "013113200357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from internet",
              "Name": "VPC1:SSH Access from Anywhere",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from internet",
              "Name": "VPC1:SSH Access from Anywhere",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:security-group/sg-0a1aace252e318256",
            "description": "SSH access from Jump Box",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.1.10/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1aace252e318256",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC2:SSH Access From Jumpbox",
            "name_prefix": "",
            "owner_id": "013113200357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC1:SSH Access From Jumpbox",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC1:SSH Access From Jumpbox",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-jumpbox-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:security-group/sg-02691e3dae5b99513",
            "description": "SSH access from Jump Box",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02691e3dae5b99513",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.10/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC1:SSH Access From Jumpbox",
            "name_prefix": "",
            "owner_id": "013113200357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC2:SSH Access From Jumpbox",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC2:SSH Access From Jumpbox",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-access-from-anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:security-group/sg-09bc18880ad459a46",
            "description": "HTTP access to public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bc18880ad459a46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC1:HTTP Access From Internet",
            "name_prefix": "",
            "owner_id": "013113200357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC1:HTTP Access From Internet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC1:HTTP Access From Internet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-0bb472686b0177790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb472686b0177790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-0b4414f1055206f41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4414f1055206f41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Inside Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-0f925328bc77509ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f925328bc77509ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc2_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-07797a476ac7ad231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07797a476ac7ad231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: DMZ Network",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-033cd5e4873097353"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PrivateVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:vpc/vpc-033cd5e4873097353",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0d4d27c3e57ed49a8",
            "default_route_table_id": "rtb-0772e493871377738",
            "default_security_group_id": "sg-0b277e1b41bcc31ff",
            "dhcp_options_id": "dopt-77184110",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-033cd5e4873097353",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0772e493871377738",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-2",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-2",
              "Team": "John, Afreen, Jawad, Usman"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PublicVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:vpc/vpc-0b6d7b82db22d1508",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05fba065457cd1be5",
            "default_route_table_id": "rtb-0fe2f70df00286c89",
            "default_security_group_id": "sg-06dc931d88af889c3",
            "dhcp_options_id": "dopt-77184110",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b6d7b82db22d1508",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe2f70df00286c89",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-1",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-1",
              "Team": "John, Afreen, Jawad, Usman"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-04c3511445de53360",
            "peer_owner_id": "013113200357",
            "peer_region": "us-west-1",
            "peer_vpc_id": "vpc-033cd5e4873097353",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC Peering between public and private VPCs",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC Peering between public and private VPCs",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0b6d7b82db22d1508"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    }
  ]
}